feat: add initial session storage hook

--- a/lib/sleeping_queens_interface_web/components/layouts/app.html.heex
+++ b/lib/sleeping_queens_interface_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <header></header>
-<main>
+<main id="local-state-store-hook" phx-hook="LocalStateStore">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
