fix: address card_position component attribute warning

--- a/lib/sleeping_queens_interface_web/live/game_live.html.heex
+++ b/lib/sleeping_queens_interface_web/live/game_live.html.heex
@@ -57,7 +57,7 @@
     </div>
     <div class="w-16 h-24 border border-dashed border-gray-700 shadow rounded overflow-hidden">
       <%= if @top_discard do %>
-        <.card card={@top_discard} card_position={nil} />
+        <.card card={@top_discard} />
       <% else %>
         <span>Discard</span>
       <% end %>
