feat: hook up discard functionality

--- a/lib/sleeping_queens_interface_web/live/game_live.html.heex
+++ b/lib/sleeping_queens_interface_web/live/game_live.html.heex
@@ -63,8 +63,8 @@
       <span><%= length(@table.draw_pile) %> cards</span>
     </div>
     <div class="w-16 h-24 border border-dashed border-gray-700 shadow rounded overflow-hidden">
-      <%= if @top_discard do %>
-        <.card card={@top_discard} />
+      <%= if top_discard(@table) do %>
+        <.card card={top_discard(@table)} />
       <% else %>
         <span>Discard</span>
       <% end %>
