feat: custom component for player

--- a/lib/sleeping_queens_interface_web/live/game_live.html.heex
+++ b/lib/sleeping_queens_interface_web/live/game_live.html.heex
@@ -7,22 +7,7 @@
 <div class="grid grid-cols-4 grid-rows-3 mt-2">
   <!-- Other players -->
   <%= for player <- @table.players, player.position != @user.position do %>
-    <span>
-      <svg
-        class="w-24"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="black"
-        viewBox="0 0 24 24"
-        strokeWidth={1.5}
-        stroke="currentColor"
-        className="w-6 h-6"
-      >
-        <path
-          strokeLinecap="round"
-          strokeLinejoin="round"
-          d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
-        />
-      </svg>
+    <.player>
       <span class="block text-center text-xl font-bold">
         <%= player.name %>
       </span>
@@ -30,7 +15,7 @@
         <span><%= length(player.queens) %></span>
         <span class="font-bold"><%= get_score(player) %></span>
       </div>
-    </span>
+    </.player>
   <% end %>
   <!-- Queens board -->
   <div class="col-start-2 col-end-4 row-start-1 row-end-3 flex justify-center">
@@ -77,27 +62,12 @@
 <div class="flex">
   <!-- My player -->
   <%= for player <- get_player(@table, @user.position) |> List.wrap()  do %>
-    <span>
-      <svg
-        class="w-20"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="black"
-        viewBox="0 0 24 24"
-        strokeWidth={1.5}
-        stroke="currentColor"
-        className="w-6 h-6"
-      >
-        <path
-          strokeLinecap="round"
-          strokeLinejoin="round"
-          d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
-        />
-      </svg>
+    <.player>
       <div class="flex justify-evenly items-center">
         <span class="text-center text-lg font-bold"><%= player.name %></span>
         <span class="font-bold text-lg"><%= get_score(player) %></span>
       </div>
-    </span>
+    </.player>
   <% end %>
   <!-- My queen cards -->
   <div class="h-24 grid grid-cols-6 px-2 mt-4">
