refactor: update protect queen modal wording

--- a/lib/sleeping_queens_interface_web/live/game_live.html.heex
+++ b/lib/sleeping_queens_interface_web/live/game_live.html.heex
@@ -206,7 +206,7 @@
              not @can_block_put_queen_to_sleep?)
       }
     >
-      ⚔️ Protect
+      Protect with <%= get_emoji(@rules) %>
     </.button>
     <.button phx-click="lose_queen">❌ Lose</.button>
   </div>
